--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             <img id="avatar" src="./assets/img/avatar.jpg" alt="avatar" href="./home"/>
         </a>
         </div>
-
-    <script src="script.js"></script>
+        <div id="dot"></div>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+        <script src="./script.js"></script>
+        <script src="./dotpointer.js"></script>
 </body>
 </html>
