--- a/home.html
+++ b/home.html
@@ -7,19 +7,22 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <title>Home</title>
 </head>
+<body>
 <header>
     <div id="navbar">
-        <div><a href="">HOME</a></div>
+        <div><a href="">Home</a></div>
         <div><a href="">CV</a></div>
         <div><img id="avatar-small" src="./assets/img/avatar.jpg"></div>
-        <div><a href="">LINKEDIN</a></div>
-        <div><a href="">CONTACT</a></div>
+        <div><a href="">Linkedin</a></div>
+        <div><a href="">Contact</a></div>
     </div>
 </header>
-<main>
-    
-</main>
-<body>
-    
+<div id="main">
+   
+</div>
+<div id="dot" ></div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+<script src="./script.js"></script>
+<script src="./dotpointer.js"></script>
 </body>
 </html>
