--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/avatar.jpg" />
     <title>Home</title>
 </head>
 <body>
@@ -12,13 +13,18 @@
     <div id="navbar">
         <div><a href="">Home</a></div>
         <div><a href="">CV</a></div>
-        <div><img id="avatar-small" src="./assets/img/avatar.jpg"></div>
+        <img id="avatar-small" src="./assets/img/avatar.jpg">
         <div><a href="">Linkedin</a></div>
         <div><a href="">Contact</a></div>
     </div>
 </header>
 <div id="main">
-   
+    <div id="home">
+       Home
+    </div>
+    <div id="Cv">
+        Ceci est mon cv
+    </div>
 </div>
 <div id="dot" ></div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
