--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/avatar.jpg" />
     <title>Portfolio</title>
 </head>
 <body>
@@ -12,9 +13,9 @@
             <img id="avatar" src="./assets/img/avatar.jpg" alt="avatar" href="./home"/>
         </a>
         </div>
-        <div id="dot"></div>
+        <div id="dot"></div>        
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
         <script src="./script.js"></script>
         <script src="./dotpointer.js"></script>
-</body>
+    </body>
 </html>
