--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="index">
         <a href="/home.html">
-            <img id="avatar" src="./assets/img/avatar.jpg" alt="avatar" href="./home"/>
+            <img class="avatar" src="./assets/img/avatar.jpg" alt="avatar" href="./home"/>
         </a>
         </div>
         <div id="dot"></div>        
