--- a/home.html
+++ b/home.html
@@ -10,24 +10,19 @@
 </head>
 <body>
 <header>
-    <div id="navbar">
-        <div><a href="">Home</a></div>
-        <div><a href="">CV</a></div>
-        <img id="avatar-small" src="./assets/img/avatar.jpg">
-        <div><a href="">Linkedin</a></div>
-        <div><a href="">Contact</a></div>
+    <div class="navbar">
+        <div class="link1"><a href="#">Page 1</a></div>
+        <div class="link2"><a href="#">Page 2</a></div>
+        <a href="/index.html"><img class="avatar-small" src="./assets/img/avatar.jpg"></a>
+        <div class="link3"><a href="#">Page 3</a></div>
+        <div class="link4"><a href="#">Page 4</a></div>
     </div>
 </header>
-<div id="main">
-    <div id="home">
-       Home
-    </div>
-    <div id="Cv">
-        Ceci est mon cv
-    </div>
+<div class="main">
+    <!--Content here-->
 </div>
 <div id="dot" ></div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 <script src="./script.js"></script>
 <script src="./dotpointer.js"></script>
 </body>
